--- a/driver_pro/app/src/main/res/layout/get_more_footview.xml
+++ b/driver_pro/app/src/main/res/layout/get_more_footview.xml
@@ -5,24 +5,28 @@
     android:background="#00ffffff"
     android:gravity="center_horizontal">
 
-    <TextView
-        android:id="@+id/tv_foot_title"
-        android:layout_width="wrap_content"
+    <LinearLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#4a4a4a"
-        android:layout_centerVertical="true"
-        android:textSize="16dp" >
-    </TextView>
+        android:orientation="horizontal"
+        android:layout_centerInParent="true"
+        android:gravity="center_vertical">
 
-    <ProgressBar
-        android:id="@+id/pb_foot_refreshing"
-        style="?android:attr/progressBarStyleSmall"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="15dp"
-        android:layout_toLeftOf="@id/tv_foot_title"
-        android:indeterminateDrawable="@drawable/get_more_footview_progressbar"
-        android:indeterminateDuration="1000" />
+        <ProgressBar
+            android:id="@+id/pb_foot_refreshing"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="15dp"
+            android:indeterminateDrawable="@drawable/get_more_footview_progressbar"
+            android:indeterminateDuration="1000" />
+        <TextView
+            android:id="@+id/tv_foot_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#4a4a4a"
+            android:textSize="16dp" >
+        </TextView>
+    </LinearLayout>
+
 
 </RelativeLayout>
