--- a/duducar_passengar_ios/duducar/PaymentViewController.xib
+++ b/duducar_passengar_ios/duducar/PaymentViewController.xib
@@ -142,9 +142,9 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bX-fk-tem">
+                        <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bX-fk-tem">
                             <rect key="frame" x="509" y="4" width="67" height="31"/>
-                            <state key="normal" title="选择" image="unchecked"/>
+                            <state key="normal" title="选择" image="checked"/>
                             <connections>
                                 <action selector="aliPaySelected:" destination="-1" eventType="touchUpInside" id="3a8-vp-53N"/>
                             </connections>
@@ -240,11 +240,12 @@
                 <constraint firstItem="BDs-tX-5b4" firstAttribute="leading" secondItem="7fy-Na-zOC" secondAttribute="leading" constant="8" id="rzO-ht-hd7"/>
                 <constraint firstAttribute="trailing" secondItem="1eT-BL-Pps" secondAttribute="trailing" constant="8" id="xNo-ST-s09"/>
             </constraints>
-            <point key="canvasLocation" x="-122" y="62"/>
+            <point key="canvasLocation" x="51" y="-39"/>
         </view>
     </objects>
     <resources>
         <image name="alipay" width="30" height="30"/>
+        <image name="checked" width="30" height="30"/>
         <image name="unchecked" width="31" height="31"/>
         <image name="weichat" width="30" height="30"/>
     </resources>
