--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -34,7 +34,7 @@
             android:paddingTop="@dimen/activity_vertical_margin">
 
             <RelativeLayout
-                android:id="@+id/my_address_layout"
+                android:id="@+id/common_address_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/setting_item_bg_selector"
