--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="shadow_width">15.0dip</dimen>
     <dimen name="slidingmenu_offset">50.0dip</dimen>
     <dimen name="complain_item_height">50dp</dimen>
+    <dimen name="common_addr_icon_size">24dp</dimen>
 </resources>
