--- a/driver_pro/app/src/main/res/layout/news_card_view.xml
+++ b/driver_pro/app/src/main/res/layout/news_card_view.xml
@@ -64,6 +64,7 @@
             android:background="#CCCCCC" />
 
         <RelativeLayout
+            android:id="@+id/news_more"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
             android:gravity="center_vertical">
