--- a/driver_pro/app/src/main/res/layout/de_ui_dialog_loading.xml
+++ b/driver_pro/app/src/main/res/layout/de_ui_dialog_loading.xml
@@ -9,7 +9,8 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:gravity="center_vertical|center_horizontal"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
         <ProgressBar
             android:id="@android:id/progress"
@@ -28,5 +29,29 @@
             android:textSize="12sp"
             android:visibility="gone" />
     </LinearLayout>
+
+    <DialerFilter
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/dialerFilter">
+
+        <EditText
+            android:id="@android:id/primary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@android:id/hint"
+            android:text="Primary" />
+
+    </DialerFilter>
+
+    <ZoomButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/zoomButton"
+        android:layout_below="@+id/dialerFilter"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
