--- a/driver_pro/app/src/main/res/layout/de_ui_dialog_loading.xml
+++ b/driver_pro/app/src/main/res/layout/de_ui_dialog_loading.xml
@@ -30,28 +30,28 @@
             android:visibility="gone" />
     </LinearLayout>
 
-    <DialerFilter
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/dialerFilter">
+    <!--<DialerFilter-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/linearLayout"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:id="@+id/dialerFilter">-->
 
-        <EditText
-            android:id="@android:id/primary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@android:id/hint"
-            android:text="Primary" />
+        <!--<EditText-->
+            <!--android:id="@android:id/primary"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@android:id/hint"-->
+            <!--android:text="Primary" />-->
 
-    </DialerFilter>
+    <!--</DialerFilter>-->
 
-    <ZoomButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/zoomButton"
-        android:layout_below="@+id/dialerFilter"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    <!--<ZoomButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/zoomButton"-->
+        <!--android:layout_below="@+id/dialerFilter"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true" />-->
 
 </RelativeLayout>
