完成乘客端个人信息模块。包括修改本地PersonalInfomation表，修改PersonalInfoActivity界面，增加EditPersonalInfoActivity、CertifyRealNameActivity，支持修改个人信息，进行实名认证等。

--- a/app/src/main/res/layout/drawer_left_menu.xml
+++ b/app/src/main/res/layout/drawer_left_menu.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/profile_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/big_padding"
@@ -22,13 +23,13 @@
             app:border_width="1dp" />
 
         <TextView
-            android:id="@+id/vip_type"
+            android:id="@+id/nickname_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="@dimen/big_padding"
             android:layout_toRightOf="@id/my_avatar"
-            android:text="普通会员"
+            android:text="设置昵称"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"/>
@@ -37,7 +38,7 @@
             android:id="@+id/my_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/vip_type"
+            android:layout_below="@id/nickname_tv"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@id/my_avatar"
