--- a/app/src/main/res/layout/fragment_personal_info.xml
+++ b/app/src/main/res/layout/fragment_personal_info.xml
@@ -20,6 +20,16 @@
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/edit_info_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:background="@android:color/transparent"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="编辑资料"
+            android:textColor="@android:color/darker_gray" />
     </android.support.v7.widget.Toolbar>
 
     <ScrollView
@@ -34,292 +44,145 @@
             android:orientation="vertical"
             android:paddingTop="30dp">
 
-            <RelativeLayout
-                android:id="@+id/my_avatar"
-                android:layout_width="fill_parent"
-                android:layout_height="110dp"
-                android:background="@drawable/setting_item_bg_selector"
-                android:clickable="true"
-                android:paddingLeft="@dimen/small_padding"
-                android:paddingRight="@dimen/small_padding">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="头像"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:id="@+id/avatar_enter_img"
-                    android:layout_width="22dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/enter_icon" />
-
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/avatar_img"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/big_padding"
-                    android:layout_toLeftOf="@id/avatar_enter_img"
-                    android:src="@drawable/default_avatar"
-                    app:border_color="#FF000000"
-                    app:border_width="1dp" />
-            </RelativeLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/light_gray" />
-
-            <RelativeLayout
-                android:id="@+id/nickname_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/setting_item_bg_selector"
-                android:clickable="true"
-                android:paddingLeft="@dimen/small_padding"
-                android:paddingRight="@dimen/small_padding">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="昵称"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:id="@+id/nickname_enter_img"
-                    android:layout_width="22dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/enter_icon" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@id/nickname_enter_img"
-                    android:text="请填写"
-                    android:textColor="#808080"
-                    android:textSize="16sp" />
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/light_gray" />
-
-            <RelativeLayout
-                android:id="@+id/sex_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/setting_item_bg_selector"
-                android:clickable="true"
-                android:paddingLeft="@dimen/small_padding"
-                android:paddingRight="@dimen/small_padding">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="性别"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:id="@+id/sex_enter_img"
-                    android:layout_width="22dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/enter_icon" />
-                <TextView
-                    android:id="@+id/my_sex"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@id/sex_enter_img"
-                    android:text="请选择"
-                    android:textColor="#808080"
-                    android:textSize="16sp" />
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/light_gray" />
-
-            <RelativeLayout
-                android:id="@+id/age_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/setting_item_bg_selector"
-                android:clickable="true"
-                android:paddingLeft="@dimen/small_padding"
-                android:paddingRight="@dimen/small_padding">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="年龄"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:id="@+id/age_enter_img"
-                    android:layout_width="22dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/enter_icon" />
-                <TextView
-                    android:id="@+id/my_age"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@id/age_enter_img"
-                    android:text="请选择"
-                    android:textColor="#808080"
-                    android:textSize="16sp" />
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/light_gray" />
-
-            <RelativeLayout
-                android:id="@+id/phone_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/setting_item_bg_selector"
-                android:clickable="true"
-                android:paddingLeft="@dimen/small_padding"
-                android:paddingRight="@dimen/small_padding">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="手机号"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:id="@+id/phone_enter_img"
-                    android:layout_width="22dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/enter_icon" />
-
-                <TextView
-                    android:id="@+id/my_phonenum"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@id/phone_enter_img"
-                    android:text="请填写"
-                    android:textColor="#808080"
-                    android:textSize="16sp" />
-            </RelativeLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/light_gray" />
-
-            <RelativeLayout
-                android:id="@+id/signature_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/setting_item_bg_selector"
-                android:clickable="true"
-                android:paddingLeft="@dimen/small_padding"
-                android:paddingRight="@dimen/small_padding">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="签名"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:id="@+id/signature_enter_img"
-                    android:layout_width="22dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/enter_icon" />
-                <TextView
-                    android:id="@+id/my_signature"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@id/signature_enter_img"
-                    android:text="请填写"
-                    android:textColor="#808080"
-                    android:textSize="16sp" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
+            <TextView
+                android:id="@+id/nickname_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:id="@+id/profession_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/setting_item_bg_selector"
-                android:clickable="true"
-                android:paddingLeft="@dimen/small_padding"
-                android:paddingRight="@dimen/small_padding">
+                android:text="用户名"
+                android:textColor="@android:color/black"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/industry_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:text="行业"
                     android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:id="@+id/profession_enter_img"
-                    android:layout_width="22dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/enter_icon" />
-
-                <TextView
-                    android:id="@+id/my_profession"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@id/profession_enter_img"
-                    android:text="请填写"
-                    android:textColor="#808080"
                     android:textSize="16sp" />
 
-            </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" - " />
 
+                <TextView
+                    android:id="@+id/company_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="公司"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" - " />
+
+                <TextView
+                    android:id="@+id/profession_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="职业"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/signature_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:lineSpacingMultiplier="1.5"
+                android:maxLines="3"
+                android:text="还未填写个性签名，介绍一下自己吧！"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/certify_layout_bg"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:id="@+id/certify_personal_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:background="@drawable/certify_item_bg"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="18dp"
+                    android:paddingTop="18dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="实名认证"
+                        android:textColor="@color/grey_title"
+                        android:textSize="17sp" />
+
+                    <TextView
+                        android:id="@+id/personal_certify_status_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:text="未认证"
+                        android:textColor="@color/gray_text"
+                        android:textSize="13sp" />
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/light_gray" />
+
+                <RelativeLayout
+                    android:id="@+id/certify_car_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:background="@drawable/certify_item_bg"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="18dp"
+                    android:paddingTop="18dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="车主认证"
+                        android:textColor="@color/grey_title"
+                        android:textSize="17sp" />
+
+                    <TextView
+                        android:id="@+id/car_certify_status_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:text="未认证"
+                        android:textColor="@color/gray_text"
+                        android:textSize="13sp" />
+                </RelativeLayout>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
